Add Connections API
