# raiden-swagger-sdk/models/ChannelAllocation.ts
@@ -1,0 +1,37 @@
+// tslint:disable
+/**
+ * Raiden API
+ * https://raiden-network.readthedocs.io/en/stable/rest_api.html
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ * @export
+ * @interface ChannelAllocation
+ */
+export interface ChannelAllocation {
+  /**
+   * Amount of funding you want to put into the network.
+   * @type {number}
+   * @memberof ChannelAllocation
+   */
+  funds: number;
+  /**
+   * Number of channels to open proactively.
+   * @type {number}
+   * @memberof ChannelAllocation
+   */
+  initialChannelTarget?: number;
+  /**
+   * Fraction of funds that will be used to join channels opened by other participants.
+   * @type {number}
+   * @memberof ChannelAllocation
+   */
+  joinableFundsTarget?: number;
+}
