# raiden-swagger-sdk/models/Connection.ts
@@ -1,0 +1,37 @@
+// tslint:disable
+/**
+ * Raiden API
+ * https://raiden-network.readthedocs.io/en/stable/rest_api.html
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ * @export
+ * @interface Connection
+ */
+export interface Connection {
+  /**
+   *
+   * @type {number}
+   * @memberof Connection
+   */
+  funds: number;
+  /**
+   *
+   * @type {number}
+   * @memberof Connection
+   */
+  sumDeposits: number;
+  /**
+   *
+   * @type {number}
+   * @memberof Connection
+   */
+  channels: number;
+}
