# raiden-swagger-sdk/models/index.ts
@@ -1,8 +1,10 @@
 export * from "./Address";
 export * from "./Channel";
 export * from "./ChannelAllOf";
+export * from "./ChannelAllocation";
 export * from "./ChannelPartial";
 export * from "./ChannelState";
+export * from "./Connection";
 export * from "./Errors";
 export * from "./InlineObject";
 export * from "./Partner";
